# datascience

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml
src/datascience/: __init__.py
src/datascience/components/: data_ingestion.py  data_transformation.py  data_validataion.py  model_evaluation.py  model_trainer.py
src/datascience/config/: configuration.py
src/datascience/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/datascience/utils/: common.py
