[project]
name = "datascience-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250915",
]
